--- a/index.html
+++ b/index.html
@@ -35,16 +35,19 @@
         align-items: center;
       }
 
-      .row-1 .box:nth-child(3n + 1) {
+      .flex .row:nth-child(1) .box:nth-child(2n - 3) {
         background-color: lavender;
       }
-      .row-2 .box:nth-child(2n) {
+
+      .flex .row:nth-child(2) .box:nth-child(2n) {
         background-color: lavender;
       }
-      .row-3 .box:nth-child(3n) {
+
+      .flex .row:nth-child(3) .box:nth-child(2n - 3) {
         background-color: lavender;
       }
-      .row-4 .box:nth-child(4n) {
+
+      .flex .row:nth-child(4) .box:nth-child(2n + 2) {
         background-color: lavender;
       }
     </style>
@@ -53,25 +56,25 @@
   <body>
     <div class="flex">
       Move mouse over the boxes
-      <div class="row row-1">
+      <div class="row">
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
       </div>
-      <div class="row row-2">
+      <div class="row">
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
       </div>
-      <div class="row row-2">
+      <div class="row">
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
       </div>
-      <div class="row row-3">
+      <div class="row">
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
