--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        cursor: pointer;
       }
 
       .flex .row:nth-child(1) .box:nth-child(2n - 3) {
